Fix grid layout bug

--- a/src/app/modules/search/components/grid-view/grid-view.component.scss
+++ b/src/app/modules/search/components/grid-view/grid-view.component.scss
@@ -6,6 +6,7 @@
   position: relative;
   background: #28282a;
   padding: 5px;
+  aspect-ratio: 16/9;
 }
 
 .event-container:hover {
